<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr03_20171.lab1.PersonalInfo">
    <EditText
        android:id="@+id/camnom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType= "text"
        android:hint= "@string/nombre"/>

    <EditText
        android:id="@+id/camape"
        android:layout_below="@id/camnom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType= "text"
        android:hint= "@string/apellidos"/>
    <TextView
        android:id= "@+id/texsexo"
        android:layout_below="@id/camape"
        android:layout_alignParentLeft="true"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="18dp"
        />
    <RadioGroup
        android:id="@+id/radiosexo"
        android:layout_below="@id/camape"
        android:layout_toRightOf="@id/texsexo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation= "horizontal"
        >

        <RadioButton
            android:id="@+id/radhom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/hombre"
            android:onClick="selsexo"

            />
        <RadioButton
            android:id="@+id/radmujer"
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:text="@string/mujer"
            android:onClick="selsexo"
            />


    </RadioGroup>

    <TextView
        android:id="@+id/texfechanac"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/fechanac"
        android:layout_below="@id/texsexo"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/botoncambfecha"
        
        />
    <Button
        android:id="@id/botoncambfecha"
        android:layout_below="@id/radiosexo"
        android:layout_toRightOf="@id/texfechanac"

        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiarfecha"
        android:onClick="mostrarcal"
    />
    <Spinner
        android:id="@+id/spinneresco"
        android:layout_below="@id/texfechanac"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/spinnerdefec">

    </Spinner>
    <Button
        android:id="@+id/botonsigui"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:onClick="mostrarconinfo"/>

</RelativeLayout>
