<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr03_20171.lab1.OtherInfo">
    <CheckBox
        android:id="@+id/checkleer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer"/>
    <CheckBox
        android:id="@+id/checkvertv"
        android:layout_below="@id/checkleer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vertv"/>
    <CheckBox
        android:id="@+id/checkbailar"
        android:layout_below="@id/checkvertv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bailar"/>
    <CheckBox
        android:id="@+id/checkcantar"
        android:layout_below="@id/checkbailar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantar"/>
    <CheckBox
        android:id="@+id/checknadar"
        android:layout_below="@id/checkcantar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nadar"/>
    <Button
        android:id="@+id/botmosinfocom"
        android:layout_below="@id/checknadar"
       android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        android:onClick="mostrarinfo"/>
    <TextView
        android:id="@+id/textmosinfo"
        android:layout_below="@id/botmosinfocom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:scrollbars="vertical"

        />
</RelativeLayout>
